--- a/ubs-server/pom.xml
+++ b/ubs-server/pom.xml
@@ -105,6 +105,17 @@
 						</webApp>
 					</configuration>
 				</plugin>
+				<plugin>
+	                <groupId>org.apache.tomcat.maven</groupId>
+	                <artifactId>tomcat7-maven-plugin</artifactId>
+	                <version>2.2</version>
+	                <configuration>
+	                    <path>/</path>
+	                    <httpsPort>8443</httpsPort>
+	                  	<keystorePass>123456</keystorePass>
+	                	<keystoreFile>${project.basedir}/ubs.keystore</keystoreFile>
+	                </configuration>
+	            </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
