--- a/ubs-server/src/main/webapp/WEB-INF/web.xml
+++ b/ubs-server/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,17 @@
         <servlet-name>springmvc</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
-		
+	
+	<security-constraint>
+	    <web-resource-collection>
+	        <web-resource-name>securedapp</web-resource-name>
+	        <url-pattern>/*</url-pattern>
+	    </web-resource-collection>
+	    <user-data-constraint>
+	        <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+	    </user-data-constraint>
+	</security-constraint>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
