implement maven overlay installation server and simple cas client

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
+		<cas.version>4.0.1</cas.version>
+		<cas.client.version>3.3.3</cas.client.version>
+		<jetty.version>8.1.16.v20140903</jetty.version>
+		
 		<servlet.version>2.5</servlet.version>
 		<jsp.version>2.2</jsp.version>
 		<spring.version>3.2.12.RELEASE</spring.version>
@@ -22,7 +26,6 @@
 		<mybatis.spring.version>1.2.1</mybatis.spring.version>
 		<shiro.version>1.2.3</shiro.version>
 		<shiro.freemarker.tags.version>0.1-SNAPSHOT</shiro.freemarker.tags.version>
-		<jetty.version>9.2.5.v20141112</jetty.version>
 		<slf4j.log4j.version>1.7.7</slf4j.log4j.version>
 		<mysql.version>5.1.34</mysql.version>
 		<commons.dbcp.version>1.4</commons.dbcp.version>
@@ -38,7 +41,6 @@
 		<oltu.oauth2.version>1.0.0</oltu.oauth2.version>
 		<junit.version>4.11</junit.version>
 		<taobao.sdk.version>20150210</taobao.sdk.version>
-		<cas.version>4.0.1</cas.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -217,6 +219,26 @@
 				<version>${oltu.oauth2.version}</version>
 			</dependency>
 			
+			<dependency>
+	            <groupId>org.jasig.cas</groupId>
+	            <artifactId>cas-server-webapp</artifactId>
+	            <version>${cas.version}</version>
+	            <type>war</type>
+	            <scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jasig.cas</groupId>
+				<artifactId>cas-management-webapp</artifactId>
+				<version>${cas.version}</version>
+				<type>war</type>
+				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+			    <groupId>org.jasig.cas.client</groupId>
+			    <artifactId>cas-client-core</artifactId>
+			    <version>${cas.client.version}</version>
+			</dependency>
+			
 			<!-- third party repository -->
 			<dependency>
 				<groupId>org.ralasafe</groupId>
@@ -295,7 +317,7 @@
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.eclipse.jetty</groupId>
+					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
 					<version>${jetty.version}</version>
 				</plugin>
@@ -320,6 +342,9 @@
 	<modules>
 		<module>ubs-server</module>
 		<module>ubs-client</module>
+		<module>ubs-cas-server</module>
+		<module>ubs-cas-c1</module>
+		<module>ubs-cas-c2</module>
 	</modules>
 	
 </project>
