--- a/ubs-server/pom.xml
+++ b/ubs-server/pom.xml
@@ -82,42 +82,41 @@
 
 	<build>
 		<finalName>ubs-server</finalName>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.jetty</groupId>
-					<artifactId>jetty-maven-plugin</artifactId>
-					<configuration>
-						<scanIntervalSeconds>10</scanIntervalSeconds>
-						<httpConnector>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<configuration>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+					</webAppConfig>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
 							<port>7777</port>
-						</httpConnector>
-						<webApp>
-							<contextPath>/</contextPath>
-						</webApp>
-					</configuration>
-				</plugin>
-				<plugin>
-	                <groupId>org.apache.tomcat.maven</groupId>
-	                <artifactId>tomcat7-maven-plugin</artifactId>
-	                <version>2.2</version>
-	                <configuration>
-	                    <path>/</path>
-	                    <httpsPort>8443</httpsPort>
-	                  	<keystorePass>123456</keystorePass>
-	                	<keystoreFile>${project.basedir}/ubs.keystore</keystoreFile>
-	                </configuration>
-	            </plugin>
-			</plugins>
-		</pluginManagement>
+						</connector>
+					</connectors>
+				</configuration>
+			</plugin>
+			<plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/</path>
+                    <httpsPort>8443</httpsPort>
+                  	<keystorePass>123456</keystorePass>
+                	<keystoreFile>${project.basedir}/ubs.keystore</keystoreFile>
+                </configuration>
+            </plugin>
+		</plugins>
 	</build>
 
 </project>
