--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
+		<spring.version>3.2.12.RELEASE</spring.version>
+		<aspectjweaver.version>1.8.4</aspectjweaver.version>
 		<cas.version>4.0.1</cas.version>
 		<cas.client.version>3.3.3</cas.client.version>
 		<jetty.version>8.1.16.v20140903</jetty.version>
@@ -21,6 +23,7 @@
 		<jcl-over-slf4j.version>1.6.1</jcl-over-slf4j.version>
 		<logback.version>1.1.1</logback.version>
 		<tomcat-jdbc.version>7.0.61</tomcat-jdbc.version>
+		<jackson.version>1.9.13</jackson.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -31,6 +34,43 @@
 	            <scope>provided</scope>
 	            <version>${servlet-api.verision}</version>
 	        </dependency>
+	        
+	        <dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-context-support</artifactId>
+			    <version>${spring.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-web</artifactId>
+			    <version>${spring.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-webmvc</artifactId>
+			    <version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-beans</artifactId>
+			    <version>${spring.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${aspectjweaver.version}</version>
+			</dependency>
 			
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -93,6 +133,17 @@
 			    <groupId>org.jasig.cas.client</groupId>
 			    <artifactId>cas-client-core</artifactId>
 			    <version>${cas.client.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-core-lgpl</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-lgpl</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
