--- a/ubs-shiro-server/pom.xml
+++ b/ubs-shiro-server/pom.xml
@@ -1,27 +1,55 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>edu.ustc</groupId>
-    <artifactId>ubs-parent</artifactId>
-    <version>0.0.1</version>
-  </parent>
-  <groupId>edu.ustc</groupId>
-  <artifactId>ubs-shiro-server</artifactId>
-  <version>0.0.1</version>
-  <packaging>war</packaging>
-  <name>ubs-shiro-server Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>ubs-shiro-server</finalName>
-  </build>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	
+	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>edu.ustc</groupId>
+		<artifactId>ubs-parent</artifactId>
+		<version>0.0.1</version>
+	</parent>
+	
+	<artifactId>ubs-shiro-server</artifactId>
+	<packaging>war</packaging>
+	
+	<dependencies>
+		<dependency>
+            <groupId>org.jasig.cas</groupId>
+            <artifactId>cas-server-webapp</artifactId>
+            <type>war</type>
+            <scope>runtime</scope>
+		</dependency>
+	</dependencies>
+	
+	<build>
+		<finalName>ubs-shiro-server</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<configuration>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+					</webAppConfig>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
+							<port>7443</port>
+							<keystore>${project.basedir}/ubs.keystore</keystore>
+							<keyPassword>123456</keyPassword>
+						</connector>
+					</connectors>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 </project>
