--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
-		<spring.version>3.2.12.RELEASE</spring.version>
+		<spring.version>3.2.6.RELEASE</spring.version>
 		<aspectjweaver.version>1.8.4</aspectjweaver.version>
 		<cas.version>4.0.1</cas.version>
 		<cas.client.version>3.3.3</cas.client.version>
@@ -24,6 +24,8 @@
 		<logback.version>1.1.1</logback.version>
 		<tomcat-jdbc.version>7.0.61</tomcat-jdbc.version>
 		<jackson.version>1.9.13</jackson.version>
+		<commons.dbcp.version>1.4</commons.dbcp.version>
+		<mysql.version>5.1.34</mysql.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -63,6 +65,11 @@
 			<dependency>
 			    <groupId>org.springframework</groupId>
 			    <artifactId>spring-beans</artifactId>
+			    <version>${spring.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-jdbc</artifactId>
 			    <version>${spring.version}</version>
 			</dependency>
 			
@@ -130,6 +137,11 @@
 	            <scope>runtime</scope>
 			</dependency>
 			<dependency>
+			    <groupId>org.jasig.cas</groupId>
+			    <artifactId>cas-server-support-jdbc</artifactId>
+			    <version>${cas.version}</version>
+			</dependency>
+			<dependency>
 			    <groupId>org.jasig.cas.client</groupId>
 			    <artifactId>cas-client-core</artifactId>
 			    <version>${cas.client.version}</version>
@@ -144,6 +156,18 @@
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-mapper-lgpl</artifactId>
 				<version>${jackson.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>${commons.dbcp.version}</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>mysql</groupId>
+			    <artifactId>mysql-connector-java</artifactId>
+			    <version>${mysql.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
