--- a/ubs-cas-server/pom.xml
+++ b/ubs-cas-server/pom.xml
@@ -20,6 +20,36 @@
             <type>war</type>
             <scope>runtime</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.jasig.cas</groupId>
+		    <artifactId>cas-server-support-jdbc</artifactId>
+		    <exclusions>
+		    	<exclusion>
+		    		<artifactId>spring-webmvc</artifactId>
+		    		<groupId>org.springframework</groupId>
+		    	</exclusion>
+		    </exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
