--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<jackson.version>1.9.13</jackson.version>
 		<commons.dbcp.version>1.4</commons.dbcp.version>
 		<mysql.version>5.1.34</mysql.version>
+		<fastjson.version>1.2.3</fastjson.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -169,6 +170,12 @@
 			    <artifactId>mysql-connector-java</artifactId>
 			    <version>${mysql.version}</version>
 			</dependency>
+			
+			<dependency>
+	            <groupId>com.alibaba</groupId>
+	            <artifactId>fastjson</artifactId>
+	            <version>${fastjson.version}</version>
+	        </dependency>
 		</dependencies>
 	</dependencyManagement>
 	
